--- a/index.html
+++ b/index.html
@@ -28,8 +28,71 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container">
-      <!-- Timeblocks go here -->
+    <!-- hard codiding until figure out how to dynamically generate -->
+    <div class="container time-block">
+      <!-- <div class="row">
+        <div class="col-1 hour"></div>
+        <input class="col-10 textarea" />
+        <div class="col-1">
+          <button class="saveBtn fas fa-lock"></button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-1 hour"></div>
+        <input class="col-10 textarea" />
+        <div class="col-1">
+          <button class="saveBtn fas fa-lock"></button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-1 hour"></div>
+        <input class="col-10 textarea" />
+        <div class="col-1">
+          <button class="saveBtn fas fa-lock"></button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-1 hour"></div>
+        <input class="col-10 textarea" />
+        <div class="col-1">
+          <button class="saveBtn fas fa-lock"></button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-1 hour"></div>
+        <input class="col-10 textarea" />
+        <div class="col-1">
+          <button class="saveBtn fas fa-lock"></button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-1 hour"></div>
+        <input class="col-10 textarea" />
+        <div class="col-1">
+          <button class="saveBtn fas fa-lock"></button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-1 hour"></div>
+        <input class="col-10 textarea" />
+        <div class="col-1">
+          <button class="saveBtn fas fa-lock"></button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-1 hour"></div>
+        <input class="col-10 textarea" />
+        <div class="col-1">
+          <button class="saveBtn fas fa-lock"></button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-1 hour"></div>
+        <input class="col-10 textarea" />
+        <div class="col-1">
+          <button class="saveBtn fas fa-lock"></button>
+        </div>
+      </div> -->
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
