reverted to hard coded html elements in order to add color coding, also added date at the top

--- a/index.html
+++ b/index.html
@@ -30,69 +30,70 @@
     </header>
     <!-- hard codiding until figure out how to dynamically generate -->
     <div class="container time-block">
-      <!-- <div class="row">
-        <div class="col-1 hour"></div>
-        <input class="col-10 textarea" />
+      <div class="row">
+        <div class="col-1 hour"> 9:00 am</div>
+        <input class="col-10 textarea timeSlot"data-time="09" />
         <div class="col-1">
           <button class="saveBtn fas fa-lock"></button>
         </div>
       </div>
       <div class="row">
-        <div class="col-1 hour"></div>
-        <input class="col-10 textarea" />
+        <div class="col-1 hour">10:00 am</div>
+        <input class="col-10 textarea timeSlot" data-time="10" />
         <div class="col-1">
           <button class="saveBtn fas fa-lock"></button>
         </div>
       </div>
       <div class="row">
-        <div class="col-1 hour"></div>
-        <input class="col-10 textarea" />
+        <div class="col-1 hour">11:00 am</div>
+        <input class="col-10 textarea timeSlot"data-time="11" />
         <div class="col-1">
           <button class="saveBtn fas fa-lock"></button>
         </div>
       </div>
       <div class="row">
-        <div class="col-1 hour"></div>
-        <input class="col-10 textarea" />
+        <div class="col-1 hour" >12:00 pm</div>
+        <input class="col-10 textarea timeSlot"data-time="12" />
         <div class="col-1">
           <button class="saveBtn fas fa-lock"></button>
         </div>
       </div>
       <div class="row">
-        <div class="col-1 hour"></div>
-        <input class="col-10 textarea" />
+        <div class="col-1 hour" >1:00 pm</div>
+        <input class="col-10 textarea timeSlot" data-time="13"/>
         <div class="col-1">
           <button class="saveBtn fas fa-lock"></button>
         </div>
       </div>
       <div class="row">
-        <div class="col-1 hour"></div>
-        <input class="col-10 textarea" />
+        <div class="col-1 hour">2:00 pm</div>
+        <input class="col-10 textarea timeSlot" data-time="14"/>
         <div class="col-1">
           <button class="saveBtn fas fa-lock"></button>
         </div>
       </div>
       <div class="row">
-        <div class="col-1 hour"></div>
-        <input class="col-10 textarea" />
+        <div class="col-1 hour">3:00 pm</div>
+        <input class="col-10 textarea timeSlot" data-time="15"/>
         <div class="col-1">
           <button class="saveBtn fas fa-lock"></button>
         </div>
       </div>
       <div class="row">
-        <div class="col-1 hour"></div>
-        <input class="col-10 textarea" />
+        <div class="col-1 hour" >4:00 pm</div>
+        <input class="col-10 textarea timeSlot" data-time="16" />
         <div class="col-1">
           <button class="saveBtn fas fa-lock"></button>
         </div>
       </div>
       <div class="row">
-        <div class="col-1 hour"></div>
-        <input class="col-10 textarea" />
+        <div class="col-1 hour" >5:00 pm</div>
+        <input class="col-10 textarea timeSlot" data-time="17" />
         <div class="col-1">
           <button class="saveBtn fas fa-lock"></button>
         </div>
-      </div> -->
+      </div>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
