--- a/index.html
+++ b/index.html
@@ -31,66 +31,66 @@
     <!-- hard codiding until figure out how to dynamically generate -->
     <div class="container time-block">
       <div class="row">
-        <div class="col-1 hour"> 9:00 am</div>
-        <input class="col-10 textarea timeSlot"data-time="09" />
+        <div class="col-1 hour time-block"> 9:00 am</div>
+        <input id="input9" class="col-10 textarea timeSlot"data-time="09" />
         <div class="col-1">
           <button class="saveBtn fas fa-lock"></button>
         </div>
       </div>
       <div class="row">
-        <div class="col-1 hour">10:00 am</div>
-        <input class="col-10 textarea timeSlot" data-time="10" />
+        <div class="col-1 hour time-block">10:00 am</div>
+        <input id="input10" class="col-10 textarea timeSlot" data-time="10" />
         <div class="col-1">
           <button class="saveBtn fas fa-lock"></button>
         </div>
       </div>
       <div class="row">
-        <div class="col-1 hour">11:00 am</div>
-        <input class="col-10 textarea timeSlot"data-time="11" />
+        <div class="col-1 hour time-block">11:00 am</div>
+        <input id="input11" class="col-10 textarea timeSlot" data-time="11" />
         <div class="col-1">
           <button class="saveBtn fas fa-lock"></button>
         </div>
       </div>
       <div class="row">
-        <div class="col-1 hour" >12:00 pm</div>
-        <input class="col-10 textarea timeSlot"data-time="12" />
+        <div class="col-1 hour time-block" >12:00 pm</div>
+        <input id="input12" class="col-10 textarea timeSlot"data-time="12" />
         <div class="col-1">
           <button class="saveBtn fas fa-lock"></button>
         </div>
       </div>
       <div class="row">
-        <div class="col-1 hour" >1:00 pm</div>
-        <input class="col-10 textarea timeSlot" data-time="13"/>
+        <div class="col-1 hour time-block" >1:00 pm</div>
+        <input id="input13" class="col-10 textarea timeSlot" data-time="13"/>
         <div class="col-1">
           <button class="saveBtn fas fa-lock"></button>
         </div>
       </div>
       <div class="row">
-        <div class="col-1 hour">2:00 pm</div>
-        <input class="col-10 textarea timeSlot" data-time="14"/>
+        <div class="col-1 hour time-block">2:00 pm</div>
+        <input id="input14" class="col-10 textarea timeSlot" data-time="14"/>
         <div class="col-1">
           <button class="saveBtn fas fa-lock"></button>
         </div>
       </div>
       <div class="row">
-        <div class="col-1 hour">3:00 pm</div>
-        <input class="col-10 textarea timeSlot" data-time="15"/>
+        <div class="col-1 hour time-block">3:00 pm</div>
+        <input id="input15" class="col-10 textarea timeSlot" data-time="15"/>
         <div class="col-1">
           <button class="saveBtn fas fa-lock"></button>
         </div>
       </div>
       <div class="row">
-        <div class="col-1 hour" >4:00 pm</div>
-        <input class="col-10 textarea timeSlot" data-time="16" />
+        <div class="col-1 hour time-block" >4:00 pm</div>
+        <input id="input16" class="col-10 textarea timeSlot" data-time="16" />
         <div class="col-1">
           <button class="saveBtn fas fa-lock"></button>
         </div>
       </div>
       <div class="row">
-        <div class="col-1 hour" >5:00 pm</div>
-        <input class="col-10 textarea timeSlot" data-time="17" />
+        <div class="col-1 hour time-block" >5:00 pm</div>
+        <input id="input17" class="col-10 textarea timeSlot" data-time="17" />
         <div class="col-1">
-          <button class="saveBtn fas fa-lock"></button>
+          <button class="saveBtn fas fa-lock "></button>
         </div>
       </div>
       </div>
